--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="icon" href="../favicon.png" type="image/png" />
     <title>Forest</title>
     <link href="./output.css" rel="stylesheet" />
   </head>
@@ -105,6 +105,7 @@
         </div>
       </div>
     </main>
+
     <!-- Acomodações -->
     <section
       id="acodomodacoes"
@@ -254,6 +255,88 @@
               class="bg-verde-400 text-verde-900 py-2 px-4 inline-block rounded-full justify-self-start self-end"
               >Reservar 18/08</a
             >
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Experiências -->
+    <section
+      id="experiencias"
+      class="container mb-12 sm:mb-16 grid sm:grid-cols-2 gap-8"
+    >
+      <div class="bg-verde-900 p-6 sm:p-8 rounded-xl">
+        <p class="mb-4 text-verde-200 uppercase tracking-widest text-sm">
+          Experiências exclusivas
+        </p>
+        <h2
+          class="mb-8 text-white text-3xl sm:text-4xl text-balance font-serif capitalize lg:text-5xl"
+        >
+          Escolha sua próxima aventura
+        </h2>
+
+        <h3
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-[width]"
+        >
+          Observação Noturna
+        </h3>
+        <p class="mb-8 text-balance text-gray-400 pl-10">
+          Explore a vida selvagem em seu habitat natural sob as estrelas.
+        </p>
+        <h3
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-[width]"
+        >
+          Vida Selvagem
+        </h3>
+        <p class="mb-8 text-balance text-gray-400 pl-10">
+          Observe a vida selvagem em seu habitat natural.
+        </p>
+        <h3
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-[width]"
+        >
+          Canoagem
+        </h3>
+        <p class="mb-8 text-balance text-gray-400 pl-10">
+          Conquiste novos horizontes com nossa equipe especializada.
+        </p>
+      </div>
+      <div class="grid grid-cols-2 grid-rows-2 gap-4">
+        <div class="relative cursor-pointer overflow-hidden rounded-xl group">
+          <img
+            class="size-full object-cover group-hover:scale-110 transition-transform"
+            src="./img/canoagem.jpg"
+            alt="Canoagem"
+          />
+          <div
+            class="absolute flex items-end p-4 inset-0 bg-gradient-to-t from-verde-950/80 opacity-0 group-hover:opacity-100 transition-opacity"
+          >
+            <span class="text-white">Canoagem</span>
+          </div>
+        </div>
+        <div
+          class="relative cursor-pointer overflow-hidden rounded-xl row-span-2 group"
+        >
+          <img
+            class="size-full object-cover group-hover:scale-110 transition-transform"
+            src="./img/observacao-noturna.jpg"
+            alt="Observação Noturna"
+          />
+          <div
+            class="absolute flex items-end p-4 inset-0 bg-gradient-to-t from-verde-950/80 opacity-0 group-hover:opacity-100 transition-opacity"
+          >
+            <span class="text-white">Observação Noturna</span>
+          </div>
+        </div>
+        <div class="relative cursor-pointer overflow-hidden rounded-xl group">
+          <img
+            class="size-full object-cover group-hover:scale-110 transition-transform"
+            src="./img/vida-selvagem.jpg"
+            alt="Vida Selvagem"
+          />
+          <div
+            class="absolute flex items-end p-4 inset-0 bg-gradient-to-t from-verde-950/80 opacity-0 group-hover:opacity-100 transition-opacity"
+          >
+            <span class="text-white">Vida Selvagem</span>
           </div>
         </div>
       </div>
