--- a/src/index.html
+++ b/src/index.html
@@ -404,5 +404,85 @@
         </div>
       </div>
     </section>
+
+    <!-- Contato -->
+    <section
+      class="container mb-12 sm:mb-16 grid lg:grid-cols-2 gap-8"
+      id="contato"
+    >
+      <div class="grid gap-4">
+        <h1 class="font-serif text-4xl text-verde-300 mb-4">Nossos Contatos</h1>
+        <p class="text-gray-200 text-balance mb-8">
+          Tem interesse em passar uma temporada na Forest? Entre em contato com
+          a gente por telefone ou email.
+        </p>
+        <div>
+          <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+          <h2 class="mb-2 text-2xl text-verde-300 font-serif">Base</h2>
+          <p class="text-gray-300">Rua da Mata, 123 - Floresta Nacional - RJ</p>
+        </div>
+        <div>
+          <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+          <h2 class="mb-2 text-2xl text-verde-300 font-serif">Email</h2>
+          <p class="text-gray-300">contato@forest.com</p>
+        </div>
+        <div>
+          <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+          <h2 class="mb-2 text-2xl text-verde-300 font-serif">Telefone</h2>
+          <p class="text-gray-300">21 99999-9999</p>
+        </div>
+      </div>
+
+      <form
+        class="grid gap-4 rounded-xl bg-verde-900 shadow-2xl p-4 lg:p-8"
+        action=""
+      >
+        <div class="grid gap-1">
+          <label class="text-white" for="nome">Nome</label>
+          <input
+            id="nome"
+            name="nome"
+            type="text"
+            class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:ring-2 focus:ring-verde-400 focus:outline-none focus:border-verde-900 placeholder:text-verde-900"
+          />
+        </div>
+        <div class="grid gap-4 sm:grid-cols-2">
+          <div class="grid gap-1">
+            <label class="text-white" for="email">Email</label>
+            <input
+              id="email"
+              name="email"
+              type="text"
+              class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:ring-2 focus:ring-verde-400 focus:outline-none focus:border-verde-900 placeholder:text-verde-900"
+            />
+          </div>
+          <div class="grid gap-1">
+            <label class="text-white" for="telefone">Telefone</label>
+            <input
+              id="telefone"
+              name="telefone"
+              type="text"
+              placeholder="(11) 99999-9999"
+              class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:ring-2 focus:ring-verde-400 focus:outline-none focus:border-verde-900 placeholder:text-verde-900"
+            />
+          </div>
+        </div>
+        <div class="grid gap-1">
+          <label class="text-white" for="telefone">Mensagem</label>
+          <textarea
+            id="mensagem"
+            name="mensagem"
+            type="text"
+            rows="5"
+            class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:ring-2 focus:ring-verde-400 focus:outline-none focus:border-verde-900 placeholder:text-verde-900"
+          ></textarea>
+        </div>
+        <button
+          class="bg-verde-400 text-verde-900 py-2 px-4 inline-block rounded-full place-self-start"
+        >
+          Enviar Email
+        </button>
+      </form>
+    </section>
   </body>
 </html>
