--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Forest</title>
     <link href="./output.css" rel="stylesheet" />
   </head>
-  <body class="bg-verde-800 font-sans mb-96">
+  <body class="bg-verde-800 font-sans">
     <div class="container mt-4 flex justify-center md:justify-start">
       <div class="flex text-verde-300 divide-x-2 divide-verde-800">
         <div class="inline-flex items-center rounded-md bg-verde-900">
@@ -497,5 +497,44 @@
         <li><img src="./img/parceiros/surfbot.svg" alt="surfbot" /></li>
       </ul>
     </section>
+
+    <!-- Footer -->
+    <footer class="container pb-8">
+      <div
+        class="bg-verde-900 grid gap-8 lg:grid-cols-2 p-6 sm:p-12 rounded-2xl mb-8"
+      >
+        <div class="flex gap-12 max-sm:flex-col max-sm:gap-4">
+          <div>
+            <h3 class="text-white font-serif text-xl mb-4">Endereço</h3>
+            <p class="text-gray-400">
+              Rua da Mata,<br />
+              123 Floresta Nacional <br />
+              Rio de Janeiro, RJ
+            </p>
+          </div>
+          <div>
+            <h3 class="text-white font-serif text-xl mb-4">Contato</h3>
+            <p class="text-gray-400">
+              contato@forest.com <br />
+              +55 21 9999-9999
+            </p>
+          </div>
+        </div>
+        <div class="lg:justify-self-end">
+          <img class="mb-4" src="./img/forest.svg" alt="Forest" />
+          <p class="text-gray-400">Conecte-se com a natureza</p>
+        </div>
+      </div>
+      <div
+        class="text-gray-400 flex items-center justify-between gap-8 text-sm max-sm:flex-col-reverse"
+      >
+        <p>© 2024 Forest. Todos os direitos reservados.</p>
+        <ul class="flex gap-8">
+          <li><a class="hover:text-verde-300" href="#">Instagram</a></li>
+          <li><a class="hover:text-verde-300" href="#">Linkedin</a></li>
+          <li><a class="hover:text-verde-300" href="#">Facebook</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
