--- a/src/index.html
+++ b/src/index.html
@@ -85,12 +85,16 @@
       <div
         class="relative text-white px-8 pb-8 max-sm:pt-12 max-sm:px-4 pt-64 bg-gradient-to-t from-verde-950/80 rounded-2xl overflow-hidden"
       >
-        <img
-          class="absolute inset-0 size-full object-cover -z-10"
-          src="./img/floresta.jpg"
-          alt="floresta"
-          srcset=""
-        />
+        <video
+          id="video"
+          class="absolute inset-0 size-full object-cover -z-10 animate-fade-in"
+          muted
+          playsinline
+          loop
+          width="1280"
+          height="720"
+          src="./img/video_chuva.mp4"
+        ></video>
         <div
           class="bg-verde-950/60 rounded-xl flex flex-col items-start gap-2 p-4 sm:gap-8 sm:items-center sm:py-1 sm:bg-verde-950 sm:inline-flex sm:flex-row sm:pr-1 sm:pl-4 sm:rounded-full mb-8"
         >
@@ -563,6 +567,25 @@
       </div>
     </footer>
     <script>
+      const video = document.getElementById('video');
+      const temperatura = document.getElementById('temperatura');
+      const tempo = document.getElementById('tempo');
+      const dia = document.getElementById('dia');
+
+      const random = Math.floor(Math.random() * 10) + 20; // Gera um número aleatório entre 19 e 29
+      temperatura.innerText = `${random}º`;
+      tempo.innerText = random < 25 ? `🌧️ ${random + 5}%` : `🌤️`;
+
+      const date = new Date();
+      dia.innerText = date
+        .toLocaleDateString('pt-BR', {
+          weekday: 'long',
+        })
+        .replace('-feira', '');
+
+      video.src = random < 25 ? './img/video_chuva.mp4' : './img/video_sol.mp4';
+      video.play();
+
       const mobileButton = document.getElementById('mobile-button');
       const mobileMenu = document.getElementById('mobile-menu');
 
