--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,7 @@
     <div class="container mt-4 flex justify-center md:justify-start">
       <div class="flex text-verde-300 divide-x-2 divide-verde-800">
         <div class="inline-flex items-center rounded-md bg-verde-900">
-          <span
-            class="size-2 bg-verde-300 block rounded-full relative -left-1"
-          ></span>
+          <span class="size-2 neon block relative -left-1"></span>
           <div class="px-4 py-2 capitalize" id="dia">Segunda</div>
           <div class="px-4 py-2" id="temperatura">25º</div>
           <div class="px-4 py-2" id="tempo">🌤️</div>
@@ -68,7 +66,7 @@
 
       <button
         id="mobile-button"
-        class="flex items-center gap-3 bg-verde-400 text-verde-900 py-2 px-4 rounded-full lg:hidden"
+        class="flex items-center gap-3 bg-verde-400 text-verde-900 py-1 rounded-full lg:hidden btn"
       >
         Menu
         <span
@@ -99,11 +97,10 @@
           class="bg-verde-950/60 rounded-xl flex flex-col items-start gap-2 p-4 sm:gap-8 sm:items-center sm:py-1 sm:bg-verde-950 sm:inline-flex sm:flex-row sm:pr-1 sm:pl-4 sm:rounded-full mb-8"
         >
           vagas para dezembro abertas!
-          <a
-            class="bg-verde-400 text-verde-900 py-2 px-4 inline-block rounded-full"
-            href=""
-            >Reserve Hoje</a
-          >
+          <a class="inline-flex items-center gap-2 btn" href="#contato"
+            >Reserve Hoje
+            <img src="./img/seta.svg" alt="" />
+          </a>
         </div>
         <h1
           class="font-serif text-balance text-4xl sm:text-5xl max-w-screen-sm mb-8 sm:mb-20"
@@ -139,7 +136,7 @@
     <!-- Acomodações -->
     <section
       id="acodomodacoes"
-      class="container mb-12 sm:mb-16 pt-16 grid gap-8 lg:grid-cols-[2fr_3fr]"
+      class="radial-gradient container mb-12 sm:mb-16 pt-16 grid gap-8 lg:grid-cols-[2fr_3fr]"
     >
       <div
         class="content-end bg-[url('./img/padrao.svg')] bg-no-repeat bg-contain bg-left-bottom"
@@ -151,24 +148,24 @@
           class="text-gray-200 *:flex *:items-center *:gap-4 grid gap-4 sm:text-xl"
         >
           <li>
-            <span class="w-6 h-0.5 bg-verde-400 inline-block"></span>Experimente
-            a natureza de perto
+            <span class="w-6 h-0.5 neon inline-block"></span>Experimente a
+            natureza de perto
           </li>
           <li>
-            <span class="w-6 h-0.5 bg-verde-400 inline-block"></span>Conecte-se
-            com a natureza
+            <span class="w-6 h-0.5 neon inline-block"></span>Conecte-se com a
+            natureza
           </li>
           <li>
-            <span class="w-6 h-0.5 bg-verde-400 inline-block"></span
-            >Desconecte-se do digital
+            <span class="w-6 h-0.5 neon inline-block"></span>Desconecte-se do
+            digital
           </li>
           <li>
-            <span class="w-6 h-0.5 bg-verde-400 inline-block"></span>Observe a
-            vida selvagem
+            <span class="w-6 h-0.5 neon inline-block"></span>Observe a vida
+            selvagem
           </li>
           <li>
-            <span class="w-6 h-0.5 bg-verde-400 inline-block"></span>Escolha a
-            sua cabine preferida
+            <span class="w-6 h-0.5 neon inline-block"></span>Escolha a sua
+            cabine preferida
           </li>
         </ul>
       </div>
@@ -240,9 +237,7 @@
               Melhor período para observação astronômica. O Céu estará claro e
               as estrelas visíveis.
             </p>
-            <a
-              href="#contato"
-              class="bg-verde-400 text-verde-900 py-2 px-4 inline-block rounded-full justify-self-start self-end"
+            <a href="#contato" class="btn justify-self-start self-end"
               >Reservar 23/02</a
             >
           </div>
@@ -259,9 +254,7 @@
               Melhor período para observação astronômica. O Céu estará claro
               iluminado pelas estrelas.
             </p>
-            <a
-              href="#contato"
-              class="bg-verde-400 text-verde-900 py-2 px-4 inline-block rounded-full justify-self-start self-end"
+            <a href="#contato" class="btn justify-self-start self-end"
               >Reservar 15/04</a
             >
           </div>
@@ -280,9 +273,7 @@
               Melhor período para observação astronômica. O Céu estará claro
               iluminado pelas estrelas.
             </p>
-            <a
-              href="#contato"
-              class="bg-verde-400 text-verde-900 py-2 px-4 inline-block rounded-full justify-self-start self-end"
+            <a href="#contato" class="btn justify-self-start self-end"
               >Reservar 18/08</a
             >
           </div>
@@ -306,7 +297,7 @@
         </h2>
 
         <h3
-          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-[width]"
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:neon hover:before:w-10 before:transition-[width]"
         >
           Observação Noturna
         </h3>
@@ -314,7 +305,7 @@
           Explore a vida selvagem em seu habitat natural sob as estrelas.
         </p>
         <h3
-          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-[width]"
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:neon hover:before:w-10 before:transition-[width]"
         >
           Vida Selvagem
         </h3>
@@ -322,7 +313,7 @@
           Observe a vida selvagem em seu habitat natural.
         </p>
         <h3
-          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-[width]"
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:neon hover:before:w-10 before:transition-[width]"
         >
           Canoagem
         </h3>
@@ -392,7 +383,7 @@
           class="grid gap-4 bg-verde-900 p-6 sm:p-8 rounded-xl flex-1 sm:hover:-translate-y-2 transition-transform"
         >
           <div
-            class="bg-verde-400 size-10 flex items-center justify-center rounded-full"
+            class="neon size-10 flex items-center justify-center rounded-full"
           >
             <img src="./img/manha.svg" alt="" />
           </div>
@@ -406,9 +397,7 @@
         <div
           class="grid gap-4 bg-verde-900 p-6 sm:p-8 rounded-xl flex-1 sm:translate-y-12 sm:hover:translate-y-10 transition-transform"
         >
-          <div
-            class="bg-verde-400 size-10 flex items-center justify-center rounded-full"
-          >
+          <div class="neon size-10 flex items-center justify-center">
             <img src="./img/dia.svg" alt="" />
           </div>
           <h3 class="font-serif text-2xl text-white">Meio-Dia</h3>
@@ -421,9 +410,7 @@
         <div
           class="grid gap-4 bg-verde-900 p-6 sm:p-8 rounded-xl flex-1 sm:hover:-translate-y-2 transition-transform"
         >
-          <div
-            class="bg-verde-400 size-10 flex items-center justify-center rounded-full"
-          >
+          <div class="neon size-10 flex items-center justify-center">
             <img src="./img/noite.svg" alt="" />
           </div>
           <h3 class="font-serif text-2xl text-white">Anoitecer</h3>
@@ -447,17 +434,17 @@
           a gente por telefone ou email.
         </p>
         <div>
-          <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+          <span class="h-0.5 w-6 neon inline-block"></span>
           <h2 class="mb-2 text-2xl text-verde-300 font-serif">Base</h2>
           <p class="text-gray-300">Rua da Mata, 123 - Floresta Nacional - RJ</p>
         </div>
         <div>
-          <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+          <span class="h-0.5 w-6 neon inline-block"></span>
           <h2 class="mb-2 text-2xl text-verde-300 font-serif">Email</h2>
           <p class="text-gray-300">contato@forest.com</p>
         </div>
         <div>
-          <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+          <span class="h-0.5 w-6 neon inline-block"></span>
           <h2 class="mb-2 text-2xl text-verde-300 font-serif">Telefone</h2>
           <p class="text-gray-300">21 99999-9999</p>
         </div>
@@ -469,22 +456,12 @@
       >
         <div class="grid gap-1">
           <label class="text-white" for="nome">Nome</label>
-          <input
-            id="nome"
-            name="nome"
-            type="text"
-            class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:ring-2 focus:ring-verde-400 focus:outline-none focus:border-verde-900 placeholder:text-verde-900"
-          />
+          <input id="nome" name="nome" type="text" class="input" />
         </div>
         <div class="grid gap-4 sm:grid-cols-2">
           <div class="grid gap-1">
             <label class="text-white" for="email">Email</label>
-            <input
-              id="email"
-              name="email"
-              type="text"
-              class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:ring-2 focus:ring-verde-400 focus:outline-none focus:border-verde-900 placeholder:text-verde-900"
-            />
+            <input id="email" name="email" type="text" class="input" />
           </div>
           <div class="grid gap-1">
             <label class="text-white" for="telefone">Telefone</label>
@@ -493,7 +470,7 @@
               name="telefone"
               type="text"
               placeholder="(11) 99999-9999"
-              class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:ring-2 focus:ring-verde-400 focus:outline-none focus:border-verde-900 placeholder:text-verde-900"
+              class="input"
             />
           </div>
         </div>
@@ -504,14 +481,10 @@
             name="mensagem"
             type="text"
             rows="5"
-            class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:ring-2 focus:ring-verde-400 focus:outline-none focus:border-verde-900 placeholder:text-verde-900"
+            class="input"
           ></textarea>
         </div>
-        <button
-          class="bg-verde-400 text-verde-900 py-2 px-4 inline-block rounded-full place-self-start"
-        >
-          Enviar Email
-        </button>
+        <button class="btn place-self-start">Enviar Email</button>
       </form>
     </section>
 
